v2.3.2/_sources/L2SIVacuumLib_L2SIVacuum_summary.rst.txt

Settings
--------

.. list-table::
    :header-rows: 1
    :align: center

    * - Setting
      - Value
      - Description
    * - AMS Net ID
      - 
      -
    * - Target IP address
      - 
      - Based on AMS Net ID by convention
    * - AMS Port
      - 851
      -

.. _L2SIVacuum_pragmas:

Pragmas
-------

Total pragmas found: 384
Total linter errors: 0



Libraries
---------

.. csv-table::
    :header: Library, Vendor, Default, Version
    :align: center

        LCLS General, SLAC, Unset, Unset
        LCLSVacuumSerialDriverLib, SLAC - LCLS, Unset, Unset
        PMPS, SLAC - LCLS, Unset, Unset
        SysFile, System, , Unset
        Tc2_DataExchange, Beckhoff Automation GmbH, Unset, Unset
        Tc2_EtherCAT, Beckhoff Automation GmbH, Unset, Unset
        Tc2_IoFunctions, Beckhoff Automation GmbH, , Unset
        Tc2_Math, Beckhoff Automation GmbH, , Unset
        Tc2_MC2, Beckhoff Automation GmbH, , Unset
        Tc2_ModbusSrv, Beckhoff Automation GmbH, Unset, Unset
        Tc2_SerialCom, Beckhoff Automation GmbH, , Unset
        Tc2_Standard, Beckhoff Automation GmbH, Unset, Unset
        Tc2_System, Beckhoff Automation GmbH, Unset, Unset
        Tc2_TcpIp, Beckhoff Automation GmbH, Unset, Unset
        Tc2_Utilities, Beckhoff Automation GmbH, Unset, Unset
        Tc3_EventLogger, Beckhoff Automation GmbH, Unset, Unset
        Tc3_JsonXml, Beckhoff Automation GmbH, Unset, Unset
        Tc3_Module, Beckhoff Automation GmbH, Unset, Unset
        TcUnit, www.tcunit.org, Unset, Unset

Symbols
-------





.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        .TCPADS_MAXUDP_BUFFSIZE, UDINT, 4398720 (32)


Constants
^^^^^^^^^

.. raw:: html

   <details>
       <summary>13 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Constants.bFPUSupport, BOOL, 526786872 (8)
        Constants.bLittleEndian, BOOL, 526786856 (8)
        Constants.bSimulationMode, BOOL, 526786864 (8)
        Constants.CompilerVersion, VERSION, 526789600 (64)
        Constants.CompilerVersionNumeric, DWORD, 526789696 (32)
        Constants.gc_GaugeValidState, INT, 323945216 (16)
        Constants.gc_GaugeValidState, INT, 323960032 (16)
        Constants.gc_iSizeOfGGOArray, INT, 323945200 (16)
        Constants.gc_iSizeOfGGOArray, INT, 323959344 (16)
        Constants.nPackMode, UINT, 526787952 (16)
        Constants.nRegisterSize, WORD, 526787936 (16)
        Constants.RuntimeVersion, VERSION, 526789536 (64)
        Constants.RuntimeVersionNumeric, DWORD, 526789664 (32)

.. raw:: html

   </details>
   <br />


DefaultGlobals
^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        DefaultGlobals.fTimeStamp, LREAL, 4096064 (64)
        DefaultGlobals.stSys, ST_System, 4096000 (40)


GeneralConstants
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GeneralConstants.MAX_STATES, UINT, 4096048 (16)


Global_Constants
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Constants.EMPTY_EVENT_CLASS, GUID, 4397888 (128)
        Global_Constants.EMPTY_EVENT_ID, UDINT, 4398016 (32)
        Global_Constants.EMPTY_SEVERITY, TcEventSeverity, 4397008 (16)
        Global_Constants.SUCCESS_EVENT, TcEventEntry, 4398048 (192)


Global_Variables
^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>347 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Variables.ADSIGRP_DEVICE_DATA, UDINT, 4188544 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARI, UDINT, 4188448 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARO, UDINT, 4188480 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RISIZE, UDINT, 4188320 (32)
        Global_Variables.ADSIGRP_IOIMAGE_ROSIZE, UDINT, 4188416 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIB, UDINT, 4188256 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIOB, UDINT, 4188512 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIX, UDINT, 4188288 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOB, UDINT, 4188352 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOX, UDINT, 4188384 (32)
        Global_Variables.ADSIGRP_SYM_DOWNLOAD, UDINT, 4188128 (32)
        Global_Variables.ADSIGRP_SYM_HNDBYNAME, UDINT, 4187904 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAME, UDINT, 4188032 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAMEEX, UDINT, 4188096 (32)
        Global_Variables.ADSIGRP_SYM_RELEASEHND, UDINT, 4188000 (32)
        Global_Variables.ADSIGRP_SYM_UPLOAD, UDINT, 4188160 (32)
        Global_Variables.ADSIGRP_SYM_UPLOADINFO, UDINT, 4188192 (32)
        Global_Variables.ADSIGRP_SYM_VALBYHND, UDINT, 4187968 (32)
        Global_Variables.ADSIGRP_SYM_VALBYNAME, UDINT, 4187936 (32)
        Global_Variables.ADSIGRP_SYM_VERSION, UDINT, 4188064 (32)
        Global_Variables.ADSIGRP_SYMNAME, UDINT, 4187840 (32)
        Global_Variables.ADSIGRP_SYMNOTE, UDINT, 4188224 (32)
        Global_Variables.ADSIGRP_SYMTAB, UDINT, 4187808 (32)
        Global_Variables.ADSIGRP_SYMVAL, UDINT, 4187872 (32)
        Global_Variables.ADSIOFFS_DEVDATA_ADSSTATE, UDINT, 4188576 (32)
        Global_Variables.ADSIOFFS_DEVDATA_DEVSTATE, UDINT, 4188608 (32)
        Global_Variables.ADSLOG_MSGTYPE_ERROR, DWORD, 4189664 (32)
        Global_Variables.ADSLOG_MSGTYPE_HINT, DWORD, 4189600 (32)
        Global_Variables.ADSLOG_MSGTYPE_LOG, DWORD, 4189696 (32)
        Global_Variables.ADSLOG_MSGTYPE_MSGBOX, DWORD, 4189728 (32)
        Global_Variables.ADSLOG_MSGTYPE_RESOURCE, DWORD, 4189760 (32)
        Global_Variables.ADSLOG_MSGTYPE_STRING, DWORD, 4189792 (32)
        Global_Variables.ADSLOG_MSGTYPE_WARN, DWORD, 4189632 (32)
        Global_Variables.ADSSTATE_CONFIG, UINT, 4187696 (16)
        Global_Variables.ADSSTATE_ERROR, UINT, 4187632 (16)
        Global_Variables.ADSSTATE_EXCEPTION, UINT, 4187760 (16)
        Global_Variables.ADSSTATE_IDLE, UINT, 4187472 (16)
        Global_Variables.ADSSTATE_INCOMPATIBLE, UINT, 4187744 (16)
        Global_Variables.ADSSTATE_INIT, UINT, 4187504 (16)
        Global_Variables.ADSSTATE_INVALID, UINT, 4187456 (16)
        Global_Variables.ADSSTATE_LOADCFG, UINT, 4187584 (16)
        Global_Variables.ADSSTATE_MAXSTATES, UINT, 4187776 (16)
        Global_Variables.ADSSTATE_POWERFAILURE, UINT, 4187600 (16)
        Global_Variables.ADSSTATE_POWERGOOD, UINT, 4187616 (16)
        Global_Variables.ADSSTATE_RECONFIG, UINT, 4187712 (16)
        Global_Variables.ADSSTATE_RESET, UINT, 4187488 (16)
        Global_Variables.ADSSTATE_RESUME, UINT, 4187680 (16)
        Global_Variables.ADSSTATE_RUN, UINT, 4187536 (16)
        Global_Variables.ADSSTATE_SAVECFG, UINT, 4187568 (16)
        Global_Variables.ADSSTATE_SHUTDOWN, UINT, 4187648 (16)
        Global_Variables.ADSSTATE_START, UINT, 4187520 (16)
        Global_Variables.ADSSTATE_STOP, UINT, 4187552 (16)
        Global_Variables.ADSSTATE_STOPPING, UINT, 4187728 (16)
        Global_Variables.ADSSTATE_SUSPEND, UINT, 4187664 (16)
        Global_Variables.AMSLOGGER_IGR_GENERAL, UDINT, 4255392 (32)
        Global_Variables.AMSLOGGER_IOF_MODE, UDINT, 4255424 (32)
        Global_Variables.AMSPORT_AMSLOGGER, UINT, 4255456 (16)
        Global_Variables.AMSPORT_EVENTLOG, UINT, 4187168 (16)
        Global_Variables.AMSPORT_LOGGER, UINT, 4186576 (16)
        Global_Variables.AMSPORT_R0_CAM, UINT, 4187392 (16)
        Global_Variables.AMSPORT_R0_CAMTOOL, UINT, 4187408 (16)
        Global_Variables.AMSPORT_R0_CNC, UINT, 4187280 (16)
        Global_Variables.AMSPORT_R0_IO, UINT, 4187200 (16)
        Global_Variables.AMSPORT_R0_ISG, UINT, 4187264 (16)
        Global_Variables.AMSPORT_R0_LINE, UINT, 4187296 (16)
        Global_Variables.AMSPORT_R0_NC, UINT, 4187216 (16)
        Global_Variables.AMSPORT_R0_NCSAF, UINT, 4187232 (16)
        Global_Variables.AMSPORT_R0_NCSVB, UINT, 4187248 (16)
        Global_Variables.AMSPORT_R0_PLC, UINT, 4187312 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS1, UINT, 4187328 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS2, UINT, 4187344 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS3, UINT, 4187360 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS4, UINT, 4187376 (16)
        Global_Variables.AMSPORT_R0_RTIME, UINT, 4187184 (16)
        Global_Variables.AMSPORT_R3_SCOPESERVER, UINT, 4187440 (16)
        Global_Variables.AMSPORT_R3_SYSSERV, UINT, 4187424 (16)
        Global_Variables.bEcFoeOpenFileNameWithFileExt, BOOL, 4186560 (8)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_INVALID, BYTE, 4189832 (8)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_LOADED, BYTE, 4189824 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_INVALID, BYTE, 4187792 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_LOADED, BYTE, 4186568 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_REQUESTED, BYTE, 4187800 (8)
        Global_Variables.bSeqReadDrvAttrAndValue, BOOL, 4184440 (8)
        Global_Variables.DATE_AND_TIME_SECPERDAY, DWORD, 4268384 (32)
        Global_Variables.DATE_AND_TIME_SECPERWEEK, DWORD, 4268416 (32)
        Global_Variables.DBG_OUTPUT_FILE, DWORD, 4274688 (32)
        Global_Variables.DBG_OUTPUT_LOG, DWORD, 4274656 (32)
        Global_Variables.DBG_OUTPUT_NONE, DWORD, 4274624 (32)
        Global_Variables.DBG_OUTPUT_VISU, DWORD, 4274720 (32)
        Global_Variables.DEFAULT_ADS_TIMEOUT, TIME, 4190496 (32)
        Global_Variables.DEFAULT_BACKLASHVALUE, LREAL, 323967232 (64)
        Global_Variables.DEFAULT_CSV_FIELD_DOUBLE_QUOTE, BYTE, 4254136 (8)
        Global_Variables.DEFAULT_CSV_FIELD_SEP, BYTE, 4192160 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_CR, BYTE, 4393488 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_LF, BYTE, 4393496 (8)
        Global_Variables.DEFAULT_HOME_POSITION, LREAL, 323967168 (64)
        Global_Variables.EC_ADS_IGRP_CANOPEN_SDO, UDINT, 4184672 (32)
        Global_Variables.EC_ADS_IGRP_CANOPEN_SDO_LASTERROR, UDINT, 4184704 (32)
        Global_Variables.EC_ADS_IGRP_ECAT_SOE, UDINT, 4184320 (32)
        Global_Variables.EC_ADS_IGRP_ECAT_SOE_LASTERROR, UDINT, 4184352 (32)
        Global_Variables.EC_ADS_IGRP_FOE_FCLOSE, UDINT, 4184512 (32)
        Global_Variables.EC_ADS_IGRP_FOE_FOPENREAD, UDINT, 4184448 (32)
        Global_Variables.EC_ADS_IGRP_FOE_FOPENWRITE, UDINT, 4184480 (32)
        Global_Variables.EC_ADS_IGRP_FOE_FREAD, UDINT, 4184544 (32)
        Global_Variables.EC_ADS_IGRP_FOE_FWRITE, UDINT, 4184576 (32)
        Global_Variables.EC_ADS_IGRP_FOE_LASTERROR, UDINT, 4184640 (32)
        Global_Variables.EC_ADS_IGRP_FOE_PROGRESSINFO, UDINT, 4184608 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_COUNT_FRAME, UDINT, 4184288 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_COUNT_SLAVE, UDINT, 4183904 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_DEVICESTATE, UDINT, 4184256 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_SENDCMD, UDINT, 4184064 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_SLAVE_ABNORMAL_STATE_CHANGES, UDINT, 4184192 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_SLAVE_ADDRESSES, UDINT, 4184032 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_SLAVE_CRC, UDINT, 4184160 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_SLAVE_IDENTITY, UDINT, 4184128 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_SLAVE_SETPRESENT_CHANGES, UDINT, 4184224 (32)
        Global_Variables.EC_ADS_IGRP_MASTER_STATEMACHINE, UDINT, 4183776 (32)
        Global_Variables.EC_ADS_IGRP_SLAVE_STATEMACHINE, UDINT, 4184096 (32)
        Global_Variables.EC_ADS_IOFFS_MASTER_COUNT_PORT, UDINT, 4183968 (32)
        Global_Variables.EC_ADS_IOFFS_MASTER_COUNT_ROUTER, UDINT, 4184000 (32)
        Global_Variables.EC_ADS_IOFFS_MASTER_COUNT_SLAVE, UDINT, 4183936 (32)
        Global_Variables.EC_ADS_IOFFS_MASTER_CURSTATE, UDINT, 4183808 (32)
        Global_Variables.EC_ADS_IOFFS_MASTER_INTERNALSTATE, UDINT, 4183872 (32)
        Global_Variables.EC_ADS_IOFFS_MASTER_REQSTATE, UDINT, 4183840 (32)
        Global_Variables.EC_AMSPORT_MASTER, UINT, 4097136 (16)
        Global_Variables.EC_CMD_TYPE_APRD, BYTE, 4096328 (8)
        Global_Variables.EC_CMD_TYPE_APRW, BYTE, 4183536 (8)
        Global_Variables.EC_CMD_TYPE_APWR, BYTE, 4097128 (8)
        Global_Variables.EC_CMD_TYPE_BRD, BYTE, 4183568 (8)
        Global_Variables.EC_CMD_TYPE_BRW, BYTE, 4183584 (8)
        Global_Variables.EC_CMD_TYPE_BWR, BYTE, 4183576 (8)
        Global_Variables.EC_CMD_TYPE_FPRD, BYTE, 4183544 (8)
        Global_Variables.EC_CMD_TYPE_FPRW, BYTE, 4183560 (8)
        Global_Variables.EC_CMD_TYPE_FPWR, BYTE, 4183552 (8)
        Global_Variables.EC_CMD_TYPE_LRD, BYTE, 4183592 (8)
        Global_Variables.EC_CMD_TYPE_LRW, BYTE, 4183608 (8)
        Global_Variables.EC_CMD_TYPE_LWR, BYTE, 4183600 (8)
        Global_Variables.EC_COE_PROTERR_ACCESS, UDINT, 4185312 (32)
        Global_Variables.EC_COE_PROTERR_BLK_SIZE, UDINT, 4185184 (32)
        Global_Variables.EC_COE_PROTERR_CCS_SCS, UDINT, 4185152 (32)
        Global_Variables.EC_COE_PROTERR_CRC, UDINT, 4185248 (32)
        Global_Variables.EC_COE_PROTERR_DATA_RANGE, UDINT, 4185728 (32)
        Global_Variables.EC_COE_PROTERR_DATA_RANGE1, UDINT, 4185760 (32)
        Global_Variables.EC_COE_PROTERR_DATA_RANGE2, UDINT, 4185792 (32)
        Global_Variables.EC_COE_PROTERR_DATA_SIZE, UDINT, 4185600 (32)
        Global_Variables.EC_COE_PROTERR_DATA_SIZE1, UDINT, 4185632 (32)
        Global_Variables.EC_COE_PROTERR_DATA_SIZE2, UDINT, 4185664 (32)
        Global_Variables.EC_COE_PROTERR_DICTIONARY, UDINT, 4185984 (32)
        Global_Variables.EC_COE_PROTERR_GENERAL, UDINT, 4185856 (32)
        Global_Variables.EC_COE_PROTERR_HARDWARE, UDINT, 4185568 (32)
        Global_Variables.EC_COE_PROTERR_I_INCOMP, UDINT, 4185536 (32)
        Global_Variables.EC_COE_PROTERR_INDEX, UDINT, 4185408 (32)
        Global_Variables.EC_COE_PROTERR_MEMORY, UDINT, 4185280 (32)
        Global_Variables.EC_COE_PROTERR_MINMAX, UDINT, 4185824 (32)
        Global_Variables.EC_COE_PROTERR_OFFSET, UDINT, 4185696 (32)
        Global_Variables.EC_COE_PROTERR_P_INCOMP, UDINT, 4185504 (32)
        Global_Variables.EC_COE_PROTERR_PDO_LEN, UDINT, 4185472 (32)
        Global_Variables.EC_COE_PROTERR_PDO_MAP, UDINT, 4185440 (32)
        Global_Variables.EC_COE_PROTERR_READONLY, UDINT, 4185376 (32)
        Global_Variables.EC_COE_PROTERR_SEQNO, UDINT, 4185216 (32)
        Global_Variables.EC_COE_PROTERR_TIMEOUT, UDINT, 4185120 (32)
        Global_Variables.EC_COE_PROTERR_TOGGLE, UDINT, 4185088 (32)
        Global_Variables.EC_COE_PROTERR_TRANSFER, UDINT, 4185888 (32)
        Global_Variables.EC_COE_PROTERR_TRANSFER1, UDINT, 4185920 (32)
        Global_Variables.EC_COE_PROTERR_TRANSFER2, UDINT, 4185952 (32)
        Global_Variables.EC_COE_PROTERR_WRITEONLY, UDINT, 4185344 (32)
        Global_Variables.EC_DCTIME_DATEDELTA_OFFSET, DWORD, 4186016 (32)
        Global_Variables.EC_DCTIME_DELTA_OFFSET, T_ULARGE_INTEGER, 4186048 (64)
        Global_Variables.EC_DCTIME_DELTA_OFFSET64, ULINT, 4186304 (64)
        Global_Variables.EC_DCTIME_TICKSPERDAY, T_ULARGE_INTEGER, 4186240 (64)
        Global_Variables.EC_DCTIME_TICKSPERDAY64, ULINT, 4186496 (64)
        Global_Variables.EC_DCTIME_TICKSPERMSEC, T_ULARGE_INTEGER, 4186112 (64)
        Global_Variables.EC_DCTIME_TICKSPERMSEC64, ULINT, 4186368 (64)
        Global_Variables.EC_DCTIME_TICKSPERSEC, T_ULARGE_INTEGER, 4186176 (64)
        Global_Variables.EC_DCTIME_TICKSPERSEC64, ULINT, 4186432 (64)
        Global_Variables.EC_DEVICE_STATE_BOOTSTRAP, BYTE, 4183640 (8)
        Global_Variables.EC_DEVICE_STATE_DISABLED, BYTE, 4183688 (8)
        Global_Variables.EC_DEVICE_STATE_ERROR, BYTE, 4183664 (8)
        Global_Variables.EC_DEVICE_STATE_INIT, BYTE, 4183624 (8)
        Global_Variables.EC_DEVICE_STATE_INITCMD_ERROR, BYTE, 4183680 (8)
        Global_Variables.EC_DEVICE_STATE_INVALID_VPRS, BYTE, 4183672 (8)
        Global_Variables.EC_DEVICE_STATE_MASK, BYTE, 4183616 (8)
        Global_Variables.EC_DEVICE_STATE_OP, BYTE, 4183656 (8)
        Global_Variables.EC_DEVICE_STATE_PREOP, BYTE, 4183632 (8)
        Global_Variables.EC_DEVICE_STATE_SAFEOP, BYTE, 4183648 (8)
        Global_Variables.EC_FOE_PROTERR_ACCESS, UDINT, 4184800 (32)
        Global_Variables.EC_FOE_PROTERR_BOOTSTRAPONLY, UDINT, 4184992 (32)
        Global_Variables.EC_FOE_PROTERR_DISKFULL, UDINT, 4184832 (32)
        Global_Variables.EC_FOE_PROTERR_EXISTS, UDINT, 4184928 (32)
        Global_Variables.EC_FOE_PROTERR_ILLEAGAL, UDINT, 4184864 (32)
        Global_Variables.EC_FOE_PROTERR_INVALIDPASSWORD, UDINT, 4185056 (32)
        Global_Variables.EC_FOE_PROTERR_NOTDEFINED, UDINT, 4184736 (32)
        Global_Variables.EC_FOE_PROTERR_NOTFOUND, UDINT, 4184768 (32)
        Global_Variables.EC_FOE_PROTERR_NOTINBOOTSTRAP, UDINT, 4185024 (32)
        Global_Variables.EC_FOE_PROTERR_NOUSER, UDINT, 4184960 (32)
        Global_Variables.EC_FOE_PROTERR_PACKENO, UDINT, 4184896 (32)
        Global_Variables.EC_LINK_STATE_ADDITIONAL_LINK, BYTE, 4183728 (8)
        Global_Variables.EC_LINK_STATE_LINK_WITHOUT_COMM, BYTE, 4183712 (8)
        Global_Variables.EC_LINK_STATE_MISSING_LINK, BYTE, 4183720 (8)
        Global_Variables.EC_LINK_STATE_NOT_PRESENT, BYTE, 4183704 (8)
        Global_Variables.EC_LINK_STATE_OK, BYTE, 4183696 (8)
        Global_Variables.EC_LINK_STATE_PORT_A, BYTE, 4183736 (8)
        Global_Variables.EC_LINK_STATE_PORT_B, BYTE, 4183744 (8)
        Global_Variables.EC_LINK_STATE_PORT_C, BYTE, 4183752 (8)
        Global_Variables.EC_LINK_STATE_PORT_D, BYTE, 4183760 (8)
        Global_Variables.EC_MAX_SLAVES, UINT, 4183520 (16)
        Global_Variables.EC_SOE_ELEMENT_ATTRIBUTE, BYTE, 4184392 (8)
        Global_Variables.EC_SOE_ELEMENT_DATASTATE, BYTE, 4183768 (8)
        Global_Variables.EC_SOE_ELEMENT_DEFAULT, BYTE, 4184432 (8)
        Global_Variables.EC_SOE_ELEMENT_MAX, BYTE, 4184416 (8)
        Global_Variables.EC_SOE_ELEMENT_MIN, BYTE, 4184408 (8)
        Global_Variables.EC_SOE_ELEMENT_NAME, BYTE, 4184384 (8)
        Global_Variables.EC_SOE_ELEMENT_UNIT, BYTE, 4184400 (8)
        Global_Variables.EC_SOE_ELEMENT_VALUE, BYTE, 4184424 (8)
        Global_Variables.EMPTY_ARG_VALUE, T_Arg, 4256064 (128)
        Global_Variables.EMPTY_GUID_REGSTRING, STRING(38), 4396616 (312)
        Global_Variables.EMPTY_GUID_STRING, STRING(36), 4396320 (296)
        Global_Variables.EMPTY_GUID_STRUCT, GUID, 4396192 (128)
        Global_Variables.EMPTY_ROUTE_ENTRY, ST_AmsRouteEntry, 4254144 (1184)
        Global_Variables.eWatchdogConfig, E_WATCHDOG_TIME_CONFIG, 4190480 (16)
        Global_Variables.fbGetCurTaskIdx, GETCURTASKINDEX, 323946368 (256)
        Global_Variables.fbGetCurTaskIdx, GETCURTASKINDEX, 526787968 (256)
        Global_Variables.FLOATREC_EXP_IS_INF, INT, 4255504 (16)
        Global_Variables.FLOATREC_EXP_IS_NAN, INT, 4255488 (16)
        Global_Variables.FLOATREC_MAX_DIGITS, INT, 4255520 (16)
        Global_Variables.FLOATREC_MAX_PRECISION, INT, 4255536 (16)
        Global_Variables.FLOATREC_MIN_PRECISION, INT, 4255552 (16)
        Global_Variables.FMTERR_ARGTYPEINVALID, DWORD, 4255872 (32)
        Global_Variables.FMTERR_ASTERISKPOSITION, DWORD, 4255648 (32)
        Global_Variables.FMTERR_DESTBUFFOVERFLOW, DWORD, 4255968 (32)
        Global_Variables.FMTERR_FLAGPOSITION, DWORD, 4255744 (32)
        Global_Variables.FMTERR_INSUFFICIENTARGS, DWORD, 4255936 (32)
        Global_Variables.FMTERR_INVALIDPOINTERINPUT, DWORD, 4256000 (32)
        Global_Variables.FMTERR_NOERROR, DWORD, 4255584 (32)
        Global_Variables.FMTERR_PERCENTSIGNPOSITION, DWORD, 4255616 (32)
        Global_Variables.FMTERR_PRECISIONDOTPOSITION, DWORD, 4255808 (32)
        Global_Variables.FMTERR_PRECISIONVALUE, DWORD, 4255712 (32)
        Global_Variables.FMTERR_TYPEFIELDVALUE, DWORD, 4255840 (32)
        Global_Variables.FMTERR_UNACCEPTEDPARAMETER, DWORD, 4255904 (32)
        Global_Variables.FMTERR_WIDTHPRECISIONVALPOS, DWORD, 4255776 (32)
        Global_Variables.FMTERR_WIDTHVALUE, DWORD, 4255680 (32)
        Global_Variables.FOPEN_MODEAPPEND, DWORD, 4189920 (32)
        Global_Variables.FOPEN_MODEBINARY, DWORD, 4189984 (32)
        Global_Variables.FOPEN_MODEPLUS, DWORD, 4189952 (32)
        Global_Variables.FOPEN_MODEREAD, DWORD, 4189856 (32)
        Global_Variables.FOPEN_MODETEXT, DWORD, 4190016 (32)
        Global_Variables.FOPEN_MODEWRITE, DWORD, 4189888 (32)
        Global_Variables.FORMAT_DECASC_CODES, BYTE, 4256448 (80)
        Global_Variables.FORMAT_HEXASC_CODES, BYTE, 4256192 (256)
        Global_Variables.FORMAT_MAX_ARGS, INT, 4255472 (16)
        Global_Variables.g_DummyVG, ST_VG, 323945312 (1056)
        Global_Variables.g_DummyVG, ST_VG, 526786880 (1056)
        Global_Variables.g_iSizeOfGGOArray, INT, 323945232 (16)
        Global_Variables.g_iSizeOfGGOArray, INT, 323960048 (16)
        Global_Variables.g_stSystem, ST_System, 323945248 (40)
        Global_Variables.g_stSystem, ST_System, 526786816 (40)
        Global_Variables.GLOBAL_DCF77_PULSE_SPLIT, TIME, 4192128 (32)
        Global_Variables.GLOBAL_DCF77_SEQUENCE_CHECK, BOOL, 4191144 (8)
        Global_Variables.GLOBAL_FORMAT_HASH_PREFIX_TYPE, E_HashPrefixTypes, 4192096 (16)
        Global_Variables.GLOBAL_SBCS_TABLE, E_SBCSType, 4192112 (16)
        Global_Variables.HKEY_MAX_BINARY_DATA_SIZE, UDINT, 4255360 (32)
        Global_Variables.IPHELPERAPI_ADAPTERSINFO, UDINT, 4253824 (32)
        Global_Variables.IPHELPERAPI_IPADDRBYHOSTNAME, UDINT, 4253856 (32)
        Global_Variables.MAX_ADAPTER_ADDRESS_LENGTH, UDINT, 4253728 (32)
        Global_Variables.MAX_ADAPTER_DESCRIPTION_LENGTH, UDINT, 4253696 (32)
        Global_Variables.MAX_ADAPTER_NAME_LENGTH, UDINT, 4253664 (32)
        Global_Variables.MAX_AVERAGE_MEASURES, INT, 4191152 (16)
        Global_Variables.MAX_LOCAL_ADAPTERS, UDINT, 4253888 (32)
        Global_Variables.MAX_REMOTE_PCS, INT, 4192176 (16)
        Global_Variables.MAX_ROUTE_ADDR_LEN, BYTE, 4254112 (8)
        Global_Variables.MAX_ROUTE_NAME_LEN, BYTE, 4192168 (8)
        Global_Variables.MAX_ROUTE_TRANSPORT, BYTE, 4254128 (8)
        Global_Variables.MAX_STRING_LENGTH, UDINT, 4190592 (32)
        Global_Variables.MIN_ROUTE_TRANSPORT, BYTE, 4254120 (8)
        Global_Variables.nWatchdogTime, BYTE, 4191136 (8)
        Global_Variables.PI, LREAL, 4190528 (64)
        Global_Variables.ROUTE_FLAG_DYNAMIC, DWORD, 4254048 (32)
        Global_Variables.ROUTE_FLAG_NOOVERRIDE, DWORD, 4254080 (32)
        Global_Variables.ROUTE_FLAG_TEMPORARY, DWORD, 4254016 (32)
        Global_Variables.SYSTEMSERVICE_ADDREMOTE, UDINT, 4253920 (32)
        Global_Variables.SYSTEMSERVICE_CHANGENETID, UDINT, 4189408 (32)
        Global_Variables.SYSTEMSERVICE_CLOSEHANDLE, UDINT, 4188768 (32)
        Global_Variables.SYSTEMSERVICE_CREATEFILE, UDINT, 4188736 (32)
        Global_Variables.SYSTEMSERVICE_DELREMOTE, UDINT, 4253952 (32)
        Global_Variables.SYSTEMSERVICE_ENUMREMOTE, UDINT, 4253984 (32)
        Global_Variables.SYSTEMSERVICE_FCLOSE, UDINT, 4188832 (32)
        Global_Variables.SYSTEMSERVICE_FDELETE, UDINT, 4189152 (32)
        Global_Variables.SYSTEMSERVICE_FEOF, UDINT, 4189120 (32)
        Global_Variables.SYSTEMSERVICE_FFILEFIND, UDINT, 4255328 (32)
        Global_Variables.SYSTEMSERVICE_FGETS, UDINT, 4188992 (32)
        Global_Variables.SYSTEMSERVICE_FOPEN, UDINT, 4188800 (32)
        Global_Variables.SYSTEMSERVICE_FPRINTF, UDINT, 4189088 (32)
        Global_Variables.SYSTEMSERVICE_FPUTS, UDINT, 4189024 (32)
        Global_Variables.SYSTEMSERVICE_FREAD, UDINT, 4188864 (32)
        Global_Variables.SYSTEMSERVICE_FRENAME, UDINT, 4189184 (32)
        Global_Variables.SYSTEMSERVICE_FSCANF, UDINT, 4189056 (32)
        Global_Variables.SYSTEMSERVICE_FSEEK, UDINT, 4188928 (32)
        Global_Variables.SYSTEMSERVICE_FTELL, UDINT, 4188960 (32)
        Global_Variables.SYSTEMSERVICE_FWRITE, UDINT, 4188896 (32)
        Global_Variables.SYSTEMSERVICE_IPHELPERAPI, UDINT, 4253760 (32)
        Global_Variables.SYSTEMSERVICE_IPHOSTNAME, UDINT, 4253792 (32)
        Global_Variables.SYSTEMSERVICE_MKDIR, UDINT, 4189216 (32)
        Global_Variables.SYSTEMSERVICE_OPENCREATE, UDINT, 4188640 (32)
        Global_Variables.SYSTEMSERVICE_OPENREAD, UDINT, 4188672 (32)
        Global_Variables.SYSTEMSERVICE_OPENWRITE, UDINT, 4188704 (32)
        Global_Variables.SYSTEMSERVICE_REG_HKEYLOCALMACHINE, UDINT, 4189280 (32)
        Global_Variables.SYSTEMSERVICE_RMDIR, UDINT, 4189248 (32)
        Global_Variables.SYSTEMSERVICE_SENDEMAIL, UDINT, 4189312 (32)
        Global_Variables.SYSTEMSERVICE_STARTPROCESS, UDINT, 4189376 (32)
        Global_Variables.SYSTEMSERVICE_TIMESERVICES, UDINT, 4189344 (32)
        Global_Variables.SYSTEMSTATEFLAGS_BSOD, BYTE, 4189840 (8)
        Global_Variables.SYSTEMSTATEFLAGS_RTVIOLATION, BYTE, 4189848 (8)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX, T_ULARGE_INTEGER, 4263040 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX64, ULINT, 4263360 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN, T_ULARGE_INTEGER, 4262976 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN64, ULINT, 4263296 (64)
        Global_Variables.SYSTEMTIME_DATEDELTA_OFFSET, DWORD, 4256032 (32)
        Global_Variables.SYSTEMTIME_MAX_MONTHDAYS, WORD, 4261936 (384)
        Global_Variables.SYSTEMTIME_MAX_YEARSDAY, WORD, 4262320 (448)
        Global_Variables.SYSTEMTIME_TICKSPERDAY, T_ULARGE_INTEGER, 4262912 (64)
        Global_Variables.SYSTEMTIME_TICKSPERDAY64, ULINT, 4263232 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC, T_ULARGE_INTEGER, 4262784 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC64, ULINT, 4263104 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC, T_ULARGE_INTEGER, 4262848 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC64, ULINT, 4263168 (64)
        Global_Variables.TaskInfo, PlcTaskSystemInfo, 323946624 (1024)
        Global_Variables.TaskInfo, PlcTaskSystemInfo, 526788224 (1024)
        Global_Variables.TCEVENT_FMTPRGSIZE, INT, 4190464 (16)
        Global_Variables.TCEVENT_SRCNAMESIZE, INT, 4190448 (16)
        Global_Variables.TCEVENTFLAG_AUTOFMTALL, WORD, 4190352 (16)
        Global_Variables.TCEVENTFLAG_FMTSELF, WORD, 4190288 (16)
        Global_Variables.TCEVENTFLAG_LOG, WORD, 4190304 (16)
        Global_Variables.TCEVENTFLAG_MSGBOX, WORD, 4190320 (16)
        Global_Variables.TCEVENTFLAG_PRIOCLASS, WORD, 4190272 (16)
        Global_Variables.TCEVENTFLAG_SRCID, WORD, 4190336 (16)
        Global_Variables.TCEVENTSTATE_CONFIRMED, WORD, 4190416 (16)
        Global_Variables.TCEVENTSTATE_INVALID, WORD, 4190368 (16)
        Global_Variables.TCEVENTSTATE_RESET, WORD, 4190400 (16)
        Global_Variables.TCEVENTSTATE_RESETCON, WORD, 4190432 (16)
        Global_Variables.TCEVENTSTATE_SIGNALED, WORD, 4190384 (16)
        Global_Variables.TcMcGlobal, _TCMCGLOBAL, 323960064 (7104)
        Global_Variables.TIMESERVICE_ADJUSTTIMETORTC, UDINT, 4189536 (32)
        Global_Variables.TIMESERVICE_DATEANDTIME, UDINT, 4189440 (32)
        Global_Variables.TIMESERVICE_RTCTIMEDIFF, UDINT, 4189504 (32)
        Global_Variables.TIMESERVICE_SYSTEMTIMES, UDINT, 4189472 (32)
        Global_Variables.TIMESERVICE_TIMEZONINFORMATION, UDINT, 4189568 (32)
        Global_Variables.WEST_EUROPE_TZI, ST_TimeZoneInformation, 4263424 (864)

.. raw:: html

   </details>
   <br />


Global_Version
^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>15 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Version.stLibVersion_LCLS_Vacuum, ST_LibVersion, 526789248 (288)
        Global_Version.stLibVersion_Tc2_DataExchange, ST_LibVersion, 323967584 (288)
        Global_Version.stLibVersion_Tc2_EtherCAT, ST_LibVersion, 4183232 (288)
        Global_Version.stLibVersion_Tc2_IoFunctions, ST_LibVersion, 4397024 (288)
        Global_Version.stLibVersion_Tc2_Math, ST_LibVersion, 323967296 (288)
        Global_Version.stLibVersion_Tc2_MC2, ST_LibVersion, 323959744 (288)
        Global_Version.stLibVersion_Tc2_ModbusSrv, ST_LibVersion, 4397312 (288)
        Global_Version.stLibVersion_Tc2_SerialCom, ST_LibVersion, 4397600 (288)
        Global_Version.stLibVersion_Tc2_Standard, ST_LibVersion, 4186592 (288)
        Global_Version.stLibVersion_Tc2_System, ST_LibVersion, 4186880 (288)
        Global_Version.stLibVersion_Tc2_Utilities, ST_LibVersion, 4191808 (288)
        Global_Version.stLibVersion_Tc3_EventLogger, ST_LibVersion, 4398304 (288)
        Global_Version.stLibVersion_Tc3_JsonXml, ST_LibVersion, 4398752 (288)
        Global_Version.stLibVersion_Tc3_Module, ST_LibVersion, 4191168 (288)
        Global_Version.stLibVersion_TcUnit, ST_LibVersion, 323944896 (288)

.. raw:: html

   </details>
   <br />


GVL
^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL.nLangId_OnlineMonitoring, DINT, 4398240 (32)


GVL_INTERNAL
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_INTERNAL.UNINITIALIZED_CLASS_GUID, GUID, 4398592 (128)


GVL_Logger
^^^^^^^^^^

.. raw:: html

   <details>
       <summary>13 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Logger.bTrickleTripped, BOOL, 4096040 (8)
        GVL_Logger.cLogHost, STRING(15), 4096128 (128)
        GVL_Logger.fbRootLogger, FB_LogMessage, 4097216 (86016)
        GVL_Logger.iLogPort, UINT, 4096256 (16)
        GVL_Logger.nGlobAccEvents, UDINT, 4097184 (32)
        GVL_Logger.nLocalTrickleTripThreshold, TIME, 4096384 (32)
        GVL_Logger.nLocalTripThreshold, TIME, 4096352 (32)
        GVL_Logger.nMinTimeViolationAcceptable, INT, 4096336 (16)
        GVL_Logger.nTrickleTripTime, TIME, 4096416 (32)
        GVL_Logger.nTripResetPeriod, TIME, 4096448 (32)
        GVL_Logger.sIpTidbit, STRING(6), 4096272 (56)
        GVL_Logger.sPlcHostname, STRING(80), 4096480 (648)
        GVL_Logger.TCPADS_MAXUDP_BUFFSIZE, UDINT, 4097152 (32)

.. raw:: html

   </details>
   <br />


GVL_Param_TcUnit
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Param_TcUnit.AdsLogMessageFifoRingBufferSize, UINT, 4401184 (16)
        GVL_Param_TcUnit.LogExtendedResults, BOOL, 4399088 (8)
        GVL_Param_TcUnit.MaxNumberOfAssertsForEachTestSuite, UINT, 4399072 (16)
        GVL_Param_TcUnit.MaxNumberOfTestsForEachTestSuite, UINT, 4399056 (16)
        GVL_Param_TcUnit.MaxNumberOfTestSuites, UINT, 4399040 (16)
        GVL_Param_TcUnit.TimeBetweenTestSuitesExecution, TIME, 4401216 (32)
        GVL_Param_TcUnit.xUnitBufferSize, UDINT, 4399104 (32)
        GVL_Param_TcUnit.xUnitEnablePublish, BOOL, 4399096 (8)
        GVL_Param_TcUnit.xUnitFilePath, STRING(255), 4399136 (2048)


GVL_PfeifferParameters
^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_PfeifferParameters.gcMaxPfeifferPumps, INT, 323945184 (16)


GVL_TcUnit
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_TcUnit.AdsMessageQueue, FB_AdsLogStringMessageFifoQueue, 315623744 (8321152)
        GVL_TcUnit.CurrentlyRunningOrderedTestInTestSuite, UINT, 315615744 (8000)
        GVL_TcUnit.CurrentTestIsFinished, BOOL, 4401208 (8)
        GVL_TcUnit.CurrentTestNameBeingCalled, STRING(255), 315581696 (2048)
        GVL_TcUnit.CurrentTestSuiteBeingCalled, POINTER TO FB_TestSuite, 315581632 (64)
        GVL_TcUnit.IgnoreCurrentTest, BOOL, 4401248 (8)
        GVL_TcUnit.NumberOfInitializedTestSuites, UINT, 4401264 (16)
        GVL_TcUnit.TcUnitRunner, FB_TcUnitRunner, 4401280 (311180352)
        GVL_TcUnit.TestSuiteAddresses, POINTER TO FB_TestSuite, 315583744 (32000)
        GVL_TcUnit.TestSuiteIsRegistered, BOOL, 4401200 (8)


ParameterList
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        ParameterList.cSourceNameSize, UDINT, 4398272 (32)


PMPS_GVL
^^^^^^^^

.. raw:: html

   <details>
       <summary>24 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_GVL.AccumulatedFF, UDINT, 3072032 (32)
        PMPS_GVL.AUX_ATTENUATORS, UINT, 323945296 (16)
        PMPS_GVL.BP_jsonDoc, SJsonValue, 3072064 (64)
        PMPS_GVL.cnMaxStateArrayLen, INT, 323952496 (16)
        PMPS_GVL.cst0RateBeam, ST_BeamParams, 323954336 (1760)
        PMPS_GVL.cstFullBeam, ST_BeamParams, 323952576 (1760)
        PMPS_GVL.DUMMY_AUX_ATT_ARRAY, ST_PMPS_Attenuator, 323956128 (1024)
        PMPS_GVL.EXCLUDED_ASSERTION_ID, UDINT, 323952256 (32)
        PMPS_GVL.FAST_TEST_VELOCITY, LREAL, 323952384 (64)
        PMPS_GVL.g_areVBoundaries, REAL, 323951168 (1024)
        PMPS_GVL.g_areVBoundariesK, REAL, 323958208 (1024)
        PMPS_GVL.g_areVBoundariesL, REAL, 323957184 (1024)
        PMPS_GVL.g_cBoundaries, INT, 323956112 (16)
        PMPS_GVL.MAX_APERTURES, UINT, 323956096 (16)
        PMPS_GVL.MAX_DEVICE_STATES, UDINT, 323952288 (32)
        PMPS_GVL.MAX_VETO_DEVICES, UINT, 323952480 (16)
        PMPS_GVL.PERange, PE_Ranges, 323952192 (64)
        PMPS_GVL.reVHyst, REAL, 323957152 (32)
        PMPS_GVL.stAttenuators, ST_PMPS_Attenuator, 323952512 (64)
        PMPS_GVL.stCurrentBeamParameters, ST_BeamParams, 323949408 (1760)
        PMPS_GVL.stRequestedBeamParameters, ST_BeamParams, 323947648 (1760)
        PMPS_GVL.SuccessfulPreemption, UDINT, 3072000 (32)
        PMPS_GVL.TRANS_SCALING_FACTOR, REAL, 323952448 (32)
        PMPS_GVL.VISIBLE_TEST_VELOCITY, LREAL, 323952320 (64)

.. raw:: html

   </details>
   <br />


PMPS_PARAM
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_PARAM.MAX_ASSERTIONS, UDINT, 323959264 (32)
        PMPS_PARAM.MAX_FAST_FAULTS, UINT, 323959232 (16)
        PMPS_PARAM.TRANS_MARGIN, REAL, 323959296 (32)


PMPS_TOOLS
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_TOOLS.fbJson, FB_JsonSaxWriter, 323959360 (384)


PRG_Test
^^^^^^^^

.. raw:: html

   <details>
       <summary>45 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_Test.fb_GCC_Test, FB_GCC_Test, 493133056 (33652736)
        PRG_Test.fb_GCC_Test.fb_MKS422.i_iPRESS_R, INT, 526785408 (16)
        PRG_Test.fb_GCC_Test.fb_MKS422.q_xHV_DIS, BOOL, 526785424 (8)
        PRG_Test.fb_GCC_Test.i_iPRESS_R, INT, 526785728 (16)
        PRG_Test.fb_GPI_Test, FB_GPI_Test, 459391424 (33741632)
        PRG_Test.fb_GPI_Test.fb_MKS275.i_iPRESS_R, INT, 493041344 (16)
        PRG_Test.fb_GPI_Test.fb_MKS317.i_iPRESS_R, INT, 493132704 (16)
        PRG_Test.fb_GPI_Test.i_iPRESS_R, INT, 493132992 (16)
        PRG_Test.fb_PIP_Test, FB_PIP_Test, 392001152 (33655552)
        PRG_Test.fb_PIP_Test.fb_PIP_GAMMA.i_iPRESS, INT, 425652048 (16)
        PRG_Test.fb_PIP_Test.fb_PIP_GAMMA.i_xSP_DI, BOOL, 425652064 (8)
        PRG_Test.fb_PIP_Test.fb_PIP_GAMMA.q_xHVEna_DO, BOOL, 425652032 (8)
        PRG_Test.fb_PTM_Test, FB_PTM_Test, 425656704 (33734720)
        PRG_Test.fb_PTM_Test.fb_PTM_Ebara_010M.i_iCurrentMon, INT, 459391184 (16)
        PRG_Test.fb_PTM_Test.fb_PTM_Ebara_010M.i_iRawSpeed, INT, 459391152 (16)
        PRG_Test.fb_PTM_Test.fb_PTM_Ebara_010M.i_iTempMon, INT, 459391168 (16)
        PRG_Test.fb_PTM_Test.fb_PTM_Ebara_010M.i_xAccel, BOOL, 459391112 (8)
        PRG_Test.fb_PTM_Test.fb_PTM_Ebara_010M.i_xAtSpd, BOOL, 459391136 (8)
        PRG_Test.fb_PTM_Test.fb_PTM_Ebara_010M.i_xDecel, BOOL, 459391104 (8)
        PRG_Test.fb_PTM_Test.fb_PTM_Ebara_010M.i_xNCFault, BOOL, 459391128 (8)
        PRG_Test.fb_PTM_Test.fb_PTM_Ebara_010M.i_xRotate, BOOL, 459391120 (8)
        PRG_Test.fb_PTM_Test.fb_PTM_Ebara_010M.q_iSpeedSet, INT, 459391248 (16)
        PRG_Test.fb_PTM_Test.fb_PTM_Ebara_010M.q_xProtection, BOOL, 459391224 (8)
        PRG_Test.fb_PTM_Test.fb_PTM_Ebara_010M.q_xReset, BOOL, 459391216 (8)
        PRG_Test.fb_PTM_Test.fb_PTM_Ebara_010M.q_xSetSpeed, BOOL, 459391232 (8)
        PRG_Test.fb_PTM_Test.fb_PTM_Ebara_010M.q_xStart, BOOL, 459391200 (8)
        PRG_Test.fb_PTM_Test.fb_PTM_Ebara_010M.q_xStop, BOOL, 459391208 (8)
        PRG_Test.fb_PTM_Test.fb_TwisTorr.i_xAtSpd, BOOL, 459302824 (8)
        PRG_Test.fb_PTM_Test.fb_TwisTorr.i_xFault, BOOL, 459302832 (8)
        PRG_Test.fb_PTM_Test.fb_TwisTorr.q_RunDO, BOOL, 459302840 (8)
        PRG_Test.fb_PTM_Test.i_diCurSpd, INT, 459391328 (16)
        PRG_Test.fb_PTM_Test.i_iCurrentMon, INT, 459391376 (16)
        PRG_Test.fb_PTM_Test.i_iRawSpeed, INT, 459391344 (16)
        PRG_Test.fb_PTM_Test.i_iTempMon, INT, 459391360 (16)
        PRG_Test.fb_PTM_Test.q_iSpeedSet, INT, 459391312 (16)
        PRG_Test.fb_VGC_Test, FB_VGC_Test, 324087232 (34265600)
        PRG_Test.fb_VGC_Test.io_fbFFHWO.q_xFastFaultOut, BOOL, 357832488 (8)
        PRG_Test.fb_VGC_Test.VGC.i_xClsLS, BOOL, 357829960 (8)
        PRG_Test.fb_VGC_Test.VGC.i_xOpnLS, BOOL, 357829952 (8)
        PRG_Test.fb_VGC_Test.VGC.q_xOPN_DO, BOOL, 357829968 (8)
        PRG_Test.fb_VRC_Test, FB_VRC_Test, 358352832 (33648320)
        PRG_Test.fb_VRC_Test.VRC.i_xClsLS, BOOL, 392001032 (8)
        PRG_Test.fb_VRC_Test.VRC.i_xOpnLS, BOOL, 392001024 (8)
        PRG_Test.fb_VRC_Test.VRC.q_xOPN_DO, BOOL, 392001040 (8)
        PRG_Test.TotalTests, INT, 323959248 (16)

.. raw:: html

   </details>
   <br />


TC_EVENTS
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TC_EVENTS.LCLSGeneralEventClass, LCLSGeneralEventClass, 526840512 (960)


TwinCAT_SystemInfoVarList
^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TwinCAT_SystemInfoVarList.__PlcTask, _Implicit_Task_Info, 526792896 (896)
        TwinCAT_SystemInfoVarList._AppInfo, PlcAppSystemInfo, 526789760 (2048)
        TwinCAT_SystemInfoVarList._TaskInfo, PlcTaskSystemInfo, 526791808 (1024)
        TwinCAT_SystemInfoVarList._TaskOid_PlcTask, OTCID, 526792832 (32)
        TwinCAT_SystemInfoVarList._TaskPouOid_PlcTask, OTCID, 526789728 (32)


